Tests/CompilerTests/negative/illegal-trait-extension.hylo
//! no-std

extension <T> U : P {}
extension A.B : P {}
extension f@let : P {}
